--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
         <div class="navigation">
             <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease"
                 data-easing2="ease" role="banner" class="navbar w-nav">
-                <div class="content-wrapper-nav w-container"><a <a href="/" aria-current="page"
+                <div class="content-wrapper-nav w-container"><a href="/" aria-current="page"
                         class="brand w-inline-block w--current"><img src="/assets/Final Logo Black.png" loading="lazy"
                             width="92" alt=""></a>
                     <nav role="navigation" class="nav-menu w-nav-menu"><a href="/about-us"
@@ -2198,7 +2198,7 @@
                     <div role="list" class="blog-flex w-dyn-items">
                         <div role="listitem" class="item-preview w-dyn-item"><a
                                 data-w-id="7e4775fe-99e7-ceb3-733f-560ac7ba1c12"
-                                href="post/how-to-create-better-website.html"
+                                href="post/how-to-create-better-website"
                                 class="link-preview-rounded w-inline-block"><img
                                     src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal.jpg"
                                     loading="lazy" width="530"
