--- a/public/service/search-engine-optimization/index.html
+++ b/public/service/search-engine-optimization/index.html
@@ -55,31 +55,31 @@
                 data-easing2="ease" role="banner" class="navbar w-nav">
                 <div class="content-wrapper-nav w-container"><a href="/" class="brand w-inline-block"><img
                             src="/Final Logo Black.png" loading="lazy" width="92" alt=""></a>
-                    <nav role="navigation" class="nav-menu w-nav-menu"><a href="/about-us.html"
+                    <nav role="navigation" class="nav-menu w-nav-menu"><a href="/about-us"
                             data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee07" class="navlink w-inline-block">
                             <div>About Us</div>
                             <div class="underline-hover" style="width: 0%; height: 1.5px;"></div>
-                        </a><a href="/services.html" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee0b"
+                        </a><a href="/services" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee0b"
                             class="navlink w-inline-block">
                             <div>Services</div>
                             <div class="underline-hover" style="width: 0%; height: 1.5px;"></div>
-                        </a><a href="/works.html" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee0f"
+                        </a><a href="/works" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee0f"
                             class="navlink w-inline-block">
                             <div>Works</div>
                             <div class="underline-hover" style="width: 0%; height: 1.5px;"></div>
-                        </a><a href="/pricing.html" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee13"
+                        </a><a href="/pricing" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee13"
                             class="navlink w-inline-block">
                             <div>Pricing</div>
                             <div class="underline-hover" style="width: 0%; height: 1.5px;"></div>
-                        </a><a href="/faq.html" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee17"
+                        </a><a href="/faq" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee17"
                             class="navlink w-inline-block">
                             <div>Faq</div>
                             <div class="underline-hover" style="width: 0%; height: 1.5px;"></div>
-                        </a><a href="/blog.html" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee1b"
+                        </a><a href="/blog" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee1b"
                             class="navlink w-inline-block">
                             <div>Blog</div>
                             <div class="underline-hover" style="width: 0%; height: 1.5px;"></div>
-                        </a><a href="/contact-us.html" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee1f"
+                        </a><a href="/contact-us" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee1f"
                             class="navlink w-inline-block">
                             <div>Contact Us</div>
                             <div class="underline-hover" style="width: 0%; height: 1.5px;"></div>
@@ -98,7 +98,7 @@
                 <div class="w-nav-overlay" data-wf-ignore="" id="w-nav-overlay-0"></div>
             </div>
             <div class="preloader" style="height: 0vh; display: flex;"><img
-                    src="https://assets.website-files.com/63238e717124a8c9a4c94e41/633324953eee0c10a6ff0742_Dual%20Ball-1s-200px.gif"
+                    src="https://digipants.com/63238e717124a8c9a4c94e41/633324953eee0c10a6ff0742_Dual%20Ball-1s-200px.gif"
                     width="40" height="Auto" alt="" class="preloader-logo"
                     style="opacity: 0; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
             </div>
@@ -260,7 +260,7 @@
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63238e717124a8c9a4c94e41"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
-    <script src="/63238e717124a8c9a4c94e41/assets/js/app.js" type="text/javascript"></script>
+    <script src="/assets/js/app.js" type="text/javascript"></script>
     <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
 </body>
 
