--- a/public/service/web-development/index.html
+++ b/public/service/web-development/index.html
@@ -32,7 +32,7 @@
         content="DigiPants is a full-service digital marketing agency based in Lucknow. In today's digital business world, you need a partner who can help you take advantage of marketing opportunities across a variety of channels in realtime.">
     <meta name="twitter:image" content="https://www.digipants.com/assets/website.png">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link href="/assets/css/style.css" rel="stylesheet" type="text/css">
+    <link href="https://www.digipants.com/assets/css/style.css" rel="stylesheet" type="text/css">
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
     <script
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
@@ -54,32 +54,32 @@
             <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease"
                 data-easing2="ease" role="banner" class="navbar w-nav">
                 <div class="content-wrapper-nav w-container"><a href="/" class="brand w-inline-block"><img
-                            src="/Final Logo Black.png" loading="lazy" width="92" alt=""></a>
-                    <nav role="navigation" class="nav-menu w-nav-menu"><a href="/about-us.html"
+                            src="/assets/Final Logo Black.png" loading="lazy" width="92" alt=""></a>
+                    <nav role="navigation" class="nav-menu w-nav-menu"><a href="/about-us"
                             data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee07" class="navlink w-inline-block">
                             <div>About Us</div>
                             <div class="underline-hover" style="width: 0%; height: 1.5px;"></div>
-                        </a><a href="/services.html" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee0b"
+                        </a><a href="/services" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee0b"
                             class="navlink w-inline-block">
                             <div>Services</div>
                             <div class="underline-hover" style="width: 0%; height: 1.5px;"></div>
-                        </a><a href="/works.html" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee0f"
+                        </a><a href="/works" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee0f"
                             class="navlink w-inline-block">
                             <div>Works</div>
                             <div class="underline-hover" style="width: 0%; height: 1.5px;"></div>
-                        </a><a href="/pricing.html" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee13"
+                        </a><a href="/pricing" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee13"
                             class="navlink w-inline-block">
                             <div>Pricing</div>
                             <div class="underline-hover" style="width: 0%; height: 1.5px;"></div>
-                        </a><a href="/faq.html" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee17"
+                        </a><a href="/faq" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee17"
                             class="navlink w-inline-block">
                             <div>Faq</div>
                             <div class="underline-hover" style="width: 0%; height: 1.5px;"></div>
-                        </a><a href="/blog.html" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee1b"
+                        </a><a href="/blog" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee1b"
                             class="navlink w-inline-block">
                             <div>Blog</div>
                             <div class="underline-hover" style="width: 0%; height: 1.5px;"></div>
-                        </a><a href="/contact-us.html" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee1f"
+                        </a><a href="/contact-us" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee1f"
                             class="navlink w-inline-block">
                             <div>Contact Us</div>
                             <div class="underline-hover" style="width: 0%; height: 1.5px;"></div>
@@ -98,7 +98,7 @@
                 <div class="w-nav-overlay" data-wf-ignore="" id="w-nav-overlay-0"></div>
             </div>
             <div class="preloader" style="height: 0vh; display: flex;"><img
-                    src="https://assets.website-files.com/63238e717124a8c9a4c94e41/633324953eee0c10a6ff0742_Dual%20Ball-1s-200px.gif"
+                    src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/633324953eee0c10a6ff0742_Dual%20Ball-1s-200px.gif"
                     width="40" height="Auto" alt="" class="preloader-logo"
                     style="opacity: 0; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
             </div>
@@ -119,7 +119,7 @@
                     <div class="hero-inner-padding">
                         <div class="max-540-pixels"></div>
                     </div><img
-                        src="https://assets.website-files.com/632622573bb4e8a1d6504d34/632c9c3d5ae0db3ee4e2bf10_jason-goodman-vbxyFxlgpjM-unsplash.jpg"
+                        src="https://digipants.com/632c9c3d5ae0db3ee4e2bf10_jason-goodman-vbxyFxlgpjM-unsplash.jpg"
                         loading="lazy" alt="">
                 </div>
             </div>
@@ -146,7 +146,7 @@
                                         <div class="divider-line"></div>
                                     </div>
                                     <div class="side-block">
-                                        <h4 class="side-title">Hire</h4><a href="/contact-us.html" target="_blank"
+                                        <h4 class="side-title">Hire</h4><a href="/contact-us" target="_blank"
                                             class="button-outline w-inline-block">
                                             <div class="text-on-button">Contact Us</div>
                                         </a>
@@ -224,46 +224,45 @@
                     <div role="list" class="service-flex w-dyn-items">
                         <div role="listitem" class="service-item grid w-dyn-item">
                             <div class="service-image-box"><a data-w-id="1c8c02c0-b8bd-5b04-c653-6a7c16968c38"
-                                    href="/service/social-media.html" class="link-preview w-inline-block"><img
-                                        src="https://assets.website-files.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal.jpg"
+                                    href="/service/social-media" class="link-preview w-inline-block"><img
+                                        src="https://digipants.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal.jpg"
                                         loading="lazy"
                                         sizes="(max-width: 479px) 90vw, (max-width: 767px) 46vw, (max-width: 991px) 47vw, (max-width: 1279px) 24vw, 291.8046875px"
-                                        srcset="https://assets.website-files.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal-p-500.jpg 500w, https://assets.website-files.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal-p-800.jpg 800w, https://assets.website-files.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal.jpg 1060w"
+                                        srcset="https://digipants.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal-p-500.jpg 500w, https://digipants.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal-p-800.jpg 800w, https://digipants.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal.jpg 1060w"
                                         width="530" alt="">
-                                    <div style="background-image:url(&quot;https://assets.website-files.com/632622573bb4e8a1d6504d34/632c97774f0a31be911a48a7_firmbee-com-gcsNOsPEXfs-unsplash.jpg&quot;)"
+                                    <div style="background-image:url(&quot;https://digipants.com/632622573bb4e8a1d6504d34/632c97774f0a31be911a48a7_firmbee-com-gcsNOsPEXfs-unsplash.jpg&quot;)"
                                         class="change-hover-image"></div>
                                 </a></div>
                             <div class="service-bottom-box">
-                                <div><a href="/service/social-media.html" class="peview-link">Social Media Marketing</a>
+                                <div><a href="/service/social-media" class="peview-link">Social Media Marketing</a>
                                     <div class="paragraph-box _5-pixels">
                                         <p>We can marketize your website and it's conent on social media platforms</p>
                                     </div>
-                                    <div class="cost-box"><a href="/service/social-media.html"
-                                            class="cost-link">36500INR /month</a>
+                                    <div class="cost-box"><a href="/service/social-media" class="cost-link">36500INR
+                                            /month</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div role="listitem" class="service-item grid w-dyn-item">
                             <div class="service-image-box"><a data-w-id="1c8c02c0-b8bd-5b04-c653-6a7c16968c38"
-                                    href="/service/search-engine-optimization.html"
-                                    class="link-preview w-inline-block"><img
-                                        src="https://assets.website-files.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal.jpg"
+                                    href="/service/search-engine-optimization" class="link-preview w-inline-block"><img
+                                        src="https://digipants.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal.jpg"
                                         loading="lazy"
                                         sizes="(max-width: 479px) 90vw, (max-width: 767px) 46vw, (max-width: 991px) 47vw, (max-width: 1279px) 24vw, 291.8046875px"
-                                        srcset="https://assets.website-files.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal-p-500.jpg 500w, https://assets.website-files.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal-p-800.jpg 800w, https://assets.website-files.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal.jpg 1060w"
+                                        srcset="https://digipants.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal-p-500.jpg 500w, https://digipants.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal-p-800.jpg 800w, https://digipants.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal.jpg 1060w"
                                         width="530" alt="">
-                                    <div style="background-image:url(&quot;https://assets.website-files.com/632622573bb4e8a1d6504d34/632c9573f5ea2e0f00bf4db5_mailchimp-04X1Yp9hNH8-unsplash.jpg&quot;)"
+                                    <div style="background-image:url(&quot;https://digipants.com/632622573bb4e8a1d6504d34/632c9573f5ea2e0f00bf4db5_mailchimp-04X1Yp9hNH8-unsplash.jpg&quot;)"
                                         class="change-hover-image"></div>
                                 </a></div>
                             <div class="service-bottom-box">
-                                <div><a href="/service/search-engine-optimization.html" class="peview-link">Search
+                                <div><a href="/service/search-engine-optimization" class="peview-link">Search
                                         Engine Optimization</a>
                                     <div class="paragraph-box _5-pixels">
                                         <p>Let our team optimize your website content for search engine to crawl easily
                                         </p>
                                     </div>
-                                    <div class="cost-box"><a href="/service/search-engine-optimization.html"
+                                    <div class="cost-box"><a href="/service/search-engine-optimization"
                                             class="cost-link">26500INR /month</a>
                                     </div>
                                 </div>
@@ -428,7 +427,7 @@
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63238e717124a8c9a4c94e41"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
-    <script src="/63238e717124a8c9a4c94e41/assets/js/app.js" type="text/javascript"></script>
+    <script src="https://www.digipants.com/assets/js/app.js" type="text/javascript"></script>
     <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
 </body>
 
