--- a/src/service/social-media.html
+++ b/src/service/social-media.html
@@ -55,31 +55,31 @@
                 data-easing2="ease" role="banner" class="navbar w-nav">
                 <div class="content-wrapper-nav w-container"><a href="/" class="brand w-inline-block"><img
                             src="/Final Logo Black.png" loading="lazy" width="92" alt=""></a>
-                    <nav role="navigation" class="nav-menu w-nav-menu"><a href="/about-us.html"
+                    <nav role="navigation" class="nav-menu w-nav-menu"><a href="/about-us"
                             data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee07" class="navlink w-inline-block">
                             <div>About Us</div>
                             <div class="underline-hover" style="width: 0%; height: 1.5px;"></div>
-                        </a><a href="/services.html" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee0b"
+                        </a><a href="/services" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee0b"
                             class="navlink w-inline-block">
                             <div>Services</div>
                             <div class="underline-hover" style="width: 0%; height: 1.5px;"></div>
-                        </a><a href="/works.html" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee0f"
+                        </a><a href="/works" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee0f"
                             class="navlink w-inline-block">
                             <div>Works</div>
                             <div class="underline-hover" style="width: 0%; height: 1.5px;"></div>
-                        </a><a href="/pricing.html" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee13"
+                        </a><a href="/pricing" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee13"
                             class="navlink w-inline-block">
                             <div>Pricing</div>
                             <div class="underline-hover" style="width: 0%; height: 1.5px;"></div>
-                        </a><a href="/faq.html" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee17"
+                        </a><a href="/faq" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee17"
                             class="navlink w-inline-block">
                             <div>Faq</div>
                             <div class="underline-hover" style="width: 0%; height: 1.5px;"></div>
-                        </a><a href="/blog.html" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee1b"
+                        </a><a href="/blog" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee1b"
                             class="navlink w-inline-block">
                             <div>Blog</div>
                             <div class="underline-hover" style="width: 0%; height: 1.5px;"></div>
-                        </a><a href="/contact-us.html" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee1f"
+                        </a><a href="/contact-us" data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee1f"
                             class="navlink w-inline-block">
                             <div>Contact Us</div>
                             <div class="underline-hover" style="width: 0%; height: 1.5px;"></div>
@@ -98,9 +98,202 @@
                 <div class="w-nav-overlay" data-wf-ignore="" id="w-nav-overlay-0"></div>
             </div>
             <div class="preloader" style="height: 0vh; display: flex;"><img
-                    src="https://assets.website-files.com/63238e717124a8c9a4c94e41/633324953eee0c10a6ff0742_Dual%20Ball-1s-200px.gif"
+                    src="https://digipants.com/63238e717124a8c9a4c94e41/633324953eee0c10a6ff0742_Dual%20Ball-1s-200px.gif"
                     width="40" height="Auto" alt="" class="preloader-logo"
                     style="opacity: 0; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
+            </div>
+        </div>
+        <div id="Top" class="service-page wf-section">
+            <div class="gradients-bg">
+                <div style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; will-change: transform;"
+                    class="gradient-circle-pink"></div>
+                <div style="transform: translate3d(0px, 0px, 0px) scale3d(1.31034, 1.31034, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; will-change: transform;"
+                    class="gradient-circle-blue"></div>
+                <div style="transform: translate3d(0px, 0px, 0px) scale3d(1.37931, 1.37931, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; will-change: transform;"
+                    class="gradient-circle-purple"></div>
+                <div style="transform: translate3d(0px, 0px, 0px) scale3d(1.13103, 1.13103, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; will-change: transform;"
+                    class="gradient-circle-yellow"></div>
+            </div>
+            <div class="content-wrapper w-container">
+                <div class="hero-service-box">
+                    <div class="hero-inner-padding">
+                        <div class="max-540-pixels"></div>
+                    </div><img
+                        src="https://digipants.com/632622573bb4e8a1d6504d34/632c9573f5ea2e0f00bf4db5_mailchimp-04X1Yp9hNH8-unsplash.jpg"
+                        loading="lazy" alt=""
+                        sizes="(max-width: 479px) 84vw, (max-width: 767px) 93vw, (max-width: 991px) 95vw, (max-width: 1439px) 84vw, 1077.4453125px"
+                        srcset="https://digipants.com/632622573bb4e8a1d6504d34/632c9573f5ea2e0f00bf4db5_mailchimp-04X1Yp9hNH8-unsplash-p-500.jpg 500w, https://digipants.com/632622573bb4e8a1d6504d34/632c9573f5ea2e0f00bf4db5_mailchimp-04X1Yp9hNH8-unsplash-p-800.jpg 800w, https://digipants.com/632622573bb4e8a1d6504d34/632c9573f5ea2e0f00bf4db5_mailchimp-04X1Yp9hNH8-unsplash-p-1080.jpg 1080w, https://digipants.com/632622573bb4e8a1d6504d34/632c9573f5ea2e0f00bf4db5_mailchimp-04X1Yp9hNH8-unsplash-p-1600.jpg 1600w, https://digipants.com/632622573bb4e8a1d6504d34/632c9573f5ea2e0f00bf4db5_mailchimp-04X1Yp9hNH8-unsplash.jpg 2200w">
+                </div>
+            </div>
+        </div>
+        <div id="Intro" class="content-section utility wf-section">
+            <div class="content-wrapper w-container">
+                <div class="inner-wrapper">
+                    <div class="flex">
+                        <div class="service-flex-content">
+                            <div class="work-left-column">
+                                <div class="list-heading-left margin">
+                                    <div class="side-block">
+                                        <h4 class="side-title">Cost</h4>
+                                        <div>$1,300</div>
+                                        <div class="divider-line"></div>
+                                    </div>
+                                    <div class="side-block">
+                                        <h4 class="side-title">Overview</h4>
+                                        <div class="w-richtext">
+                                            <p>-Website Designed</p>
+                                            <p>-Webflow Development</p>
+                                            <p>-Fast Support</p>
+                                        </div>
+                                        <div class="divider-line"></div>
+                                    </div>
+                                    <div class="side-block">
+                                        <h4 class="side-title">Hire</h4><a
+                                            href="https://webflow.com/templates/designers/pablo-ramos" target="_blank"
+                                            class="button-outline w-inline-block">
+                                            <div class="text-on-button">Contact Us</div>
+                                        </a>
+                                        <div class="divider-line"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="work-right">
+                                <div class="heading-intro less-margin">
+                                    <div>
+                                        <h1 class="less-top-margin">Social Media</h1>
+                                        <div class="paragraph-box">
+                                            <p>Let our team take care of your Social Networks</p>
+                                        </div>
+                                    </div>
+                                    <div class="divider-line"></div>
+                                </div>
+                                <div class="bottom-margin w-richtext">
+                                    <h3>Overview</h3>
+                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+                                        doloremque
+                                        laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
+                                        quasi
+                                        architecto beatae vitae dicta sunt explicabo.</p>
+                                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed
+                                        quia
+                                        consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                                    <p>Ellentesque sit amet odio nisi. Phasellus quis lorem leo. s, libero diam finibus
+                                        tellus,
+                                        at sagittis tellus eros vitae nisi. Sed dignissim augue sit amet diam laoreet
+                                        venenatis.
+                                        Aliquam bibendum erat eu nisi faucibus dignissim. Phasellus dignissim est tempor
+                                        eros
+                                        pulvinar luctus. Nam vulputate, risus a efficitur cursus, felis dolor vulputate
+                                        mi, ac
+                                        eleifend libero velit sed nunc.</p>
+                                    <h3>The Process</h3>
+                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+                                        doloremque
+                                        laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
+                                        quasi
+                                        architecto beatae vitae dicta sunt explicabo.</p>
+                                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed
+                                        quia
+                                        consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                                    <p>Ellentesque sit amet odio nisi. Phasellus quis lorem leo. s, libero diam finibus
+                                        tellus,
+                                        at sagittis tellus eros vitae nisi. Sed dignissim augue sit amet diam laoreet
+                                        venenatis.
+                                        Aliquam bibendum erat eu nisi faucibus dignissim. Phasellus dignissim est tempor
+                                        eros
+                                        pulvinar luctus. Nam vulputate, risus a efficitur cursus, felis dolor vulputate
+                                        mi, ac
+                                        eleifend libero velit sed nunc.</p>
+                                    <h3>The End</h3>
+                                    <p>Sed in justo ac leo sodales suscipit. Etiam rhoncus porta massa a volutpat.
+                                        Vestibulum
+                                        ultrices sollicitudin eleifend.</p>
+                                    <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,
+                                        adipisci
+                                        velit, sed quia non numquam eius modi tempora inciduntCurabitur euismod
+                                        pellentesque
+                                        dapibus. Maecenas a pretium odio. Morbi porta congue tempus. Donec consequat
+                                        condimentum
+                                        ligula, id dapibus lorem tincidunt non.</p>
+                                    <p>Ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam,
+                                        quis
+                                        nostrum exercitationem ullam corporis suscipit.</p>
+                                    <p>Image by <a
+                                            href="https://unsplash.com/es/colecciones/soRFjAdkiPQ/sapiens-webflow-template"
+                                            target="_blank">Credit</a></p>
+                                </div>
+                                <div class="contact-support">
+                                    <div class="hero-mini-pic"></div>
+                                    <div class="curve-text-box"><a href="/contact-us" class="mini-title-link">Need help?
+                                            Contact
+                                            support.</a></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <a href="#Top" data-w-id="a2fa7e47-29d0-45f4-b294-013746ab55b3"
+            style="opacity: 0.9; display: flex; transform: translate3d(0px, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
+            class="go-up-button w-inline-block"></a>
+        <div class="posts-inner-page wf-section">
+            <div class="content-wrapper w-container">
+                <div class="heading-intro">
+                    <div class="max-400-pixels">
+                        <h4 class="no-margin">Other Services</h4>
+                    </div>
+                    <div class="divider-line"></div>
+                </div>
+                <div class="w-dyn-list">
+                    <div role="list" class="service-flex w-dyn-items">
+                        <div role="listitem" class="service-item grid w-dyn-item">
+                            <div class="service-image-box"><a data-w-id="1c8c02c0-b8bd-5b04-c653-6a7c16968c38"
+                                    href="/service/website-design" class="link-preview w-inline-block"><img
+                                        src="https://digipants.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal.jpg"
+                                        loading="lazy"
+                                        sizes="(max-width: 479px) 90vw, (max-width: 767px) 46vw, (max-width: 991px) 47vw, (max-width: 1439px) 24vw, 310.28125px"
+                                        width="530"
+                                        srcset="https://digipants.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal-p-500.jpg 500w, https://digipants.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal-p-800.jpg 800w, https://digipants.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal.jpg 1060w"
+                                        alt="">
+                                    <div style="background-image:url(&quot;https://digipants.com/632622573bb4e8a1d6504d34/632c97774f0a31be911a48a7_firmbee-com-gcsNOsPEXfs-unsplash.jpg&quot;)"
+                                        class="change-hover-image"></div>
+                                </a></div>
+                            <div class="service-bottom-box">
+                                <div><a href="/service/website-design" class="peview-link">Website Design</a>
+                                    <div class="paragraph-box _5-pixels">
+                                        <p>Build a unique Website with Sapiens Webflow Template</p>
+                                    </div>
+                                    <div class="cost-box"><a href="/service/website-design" class="cost-link">$3,500</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div role="listitem" class="service-item grid w-dyn-item">
+                            <div class="service-image-box"><a data-w-id="1c8c02c0-b8bd-5b04-c653-6a7c16968c38"
+                                    href="/service/webflow-development" class="link-preview w-inline-block"><img
+                                        src="https://digipants.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal.jpg"
+                                        loading="lazy"
+                                        sizes="(max-width: 479px) 90vw, (max-width: 767px) 46vw, (max-width: 991px) 47vw, (max-width: 1439px) 24vw, 310.28125px"
+                                        width="530"
+                                        srcset="https://digipants.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal-p-500.jpg 500w, https://digipants.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal-p-800.jpg 800w, https://digipants.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal.jpg 1060w"
+                                        alt="">
+                                    <div style="background-image:url(&quot;https://digipants.com/632622573bb4e8a1d6504d34/632c9c3d5ae0db3ee4e2bf10_jason-goodman-vbxyFxlgpjM-unsplash.jpg&quot;)"
+                                        class="change-hover-image"></div>
+                                </a></div>
+                            <div class="service-bottom-box">
+                                <div><a href="/service/webflow-development" class="peview-link">Webflow Development</a>
+                                    <div class="paragraph-box _5-pixels">
+                                        <p>We can turn your design into a Webflow site</p>
+                                    </div>
+                                    <div class="cost-box"><a href="/service/webflow-development"
+                                            class="cost-link">$4,200</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="footer wf-section">
@@ -260,7 +453,7 @@
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63238e717124a8c9a4c94e41"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
-    <script src="/63238e717124a8c9a4c94e41/assets/js/app.js" type="text/javascript"></script>
+    <script src="/assets/js/app.js" type="text/javascript"></script>
     <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
 </body>
 
