--- a/src/services.html
+++ b/src/services.html
@@ -155,7 +155,7 @@
                         <div role="list" class="w-dyn-items">
                             <div role="listitem" class="service-item w-dyn-item">
                                 <div class="service-left"><a data-w-id="62f7afb6-a5f3-13ca-ee75-6564a0b0c679"
-                                        href="/service/web-development.html" class="link-preview w-inline-block"><img
+                                        href="/service/web-development" class="link-preview w-inline-block"><img
                                             src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2).webp"
                                             loading="lazy" width="585.5"
                                             srcset="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2)-p-500.webp 500w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2)-p-800.webp 800w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2).webp 980w"
@@ -164,19 +164,19 @@
                                             class="change-hover-image"></div>
                                     </a></div>
                                 <div class="service-rigth-box">
-                                    <div><a href="/service/web-development.html" class="preview-link-big">Website Design
+                                    <div><a href="/service/web-development" class="preview-link-big">Website Design
                                             & Develoment</a>
                                         <div class="paragraph-box _5-pixels">
                                             <p>Build a unique Website with DigiPants' skilled developers</p>
                                         </div>
-                                        <div class="paragraph-box"><a href="/service/web-development.html"
+                                        <div class="paragraph-box"><a href="/service/web-development"
                                                 class="cost">46500INR /month</a></div>
                                     </div>
                                 </div>
                             </div>
                             <div role="listitem" class="service-item w-dyn-item">
                                 <div class="service-left"><a data-w-id="62f7afb6-a5f3-13ca-ee75-6564a0b0c679"
-                                        href="/service/social-media.html" class="link-preview w-inline-block"><img
+                                        href="/service/social-media" class="link-preview w-inline-block"><img
                                             src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2).webp"
                                             loading="lazy" width="585.5"
                                             srcset="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2)-p-500.webp 500w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2)-p-800.webp 800w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2).webp 980w"
@@ -185,14 +185,14 @@
                                             class="change-hover-image"></div>
                                     </a></div>
                                 <div class="service-rigth-box">
-                                    <div><a href="/service/social-media.html" class="preview-link-big">Social Media
+                                    <div><a href="/service/social-media" class="preview-link-big">Social Media
                                             Marketing</a>
                                         <div class="paragraph-box _5-pixels">
                                             <p>We can marketize your website and it's conent on social media platforms
                                             </p>
                                         </div>
-                                        <div class="paragraph-box"><a href="/service/social-media.html"
-                                                class="cost">36500INR /month</a></div>
+                                        <div class="paragraph-box"><a href="/service/social-media" class="cost">36500INR
+                                                /month</a></div>
                                     </div>
                                 </div>
                             </div>
